--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "01-special.h": "c",
         "04-op_r_imm.h": "c",
         "03-op_sp_hl.h": "c",
-        "gbda-pico.h": "c"
+        "gbda-pico.h": "c",
+        "dma.h": "c"
     }
 }
