games work fine, but returns back to ~50fps lol

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "stdint.h": "c",
         "dmg-acid2.h": "c",
         "pitman.h": "c",
-        "kirby_dream_land.h": "c"
+        "kirby_dream_land.h": "c",
+        "dr_mario.h": "c"
     }
 }
